--- a/client/src/locales/de/translationDE.json
+++ b/client/src/locales/de/translationDE.json
@@ -1,3 +1,10 @@
 {
-    "header": "hallo"
+    "header": "Ein Crowdsourced-Verzeichnis von Dienstleistungen in Berlin",
+    "landing_1": "Die Navigation durch das deutsche bürokratische System und der Zugang zu den Dienstleistungen, die Sie benötigen, kann das Leben in Berlin schwierig machen, wenn Sie die Sprache nicht sprechen, besonders wenn Sie keine Papiere haben, LGBTQIA+ sind oder nicht genug Geld haben, um Hilfe zu engagieren.",
+    "landing_2": " Es gibt viele Dienstleistungen in Berlin, aber diese zu finden ist meist nicht sehr einfach. Unser Ziel ist es, eine große Auswahl dieser Dienste zu sammeln und sie für diejenigen zugänglich zu machen, die sie benötigen.",
+    "landing_3": " Wir haben ein zugängliches Verzeichnis erstellt, um Ihnen zu helfen. Mit einer Suchmaschine, die Filter und Schlüsselwörter verwendet, hoffen wir, dass Sie leicht auf das zugreifen können, wonach Sie suchen.",
+    "landing_4": " Unser Crowdsourced Directory ist darauf angewiesen, dass die Community Dienste vorschlägt, die ihrer Meinung nach mit anderen geteilt werden sollten. Vielen Dank für Ihre Unterstützung.",
+    "find": "Finden Sie mehr Informationen über unsere Mission",
+    "submit": "Seinen Dienst einreichen",
+    "here": "hier"
 }
